data/all_generated_tests/raw_wast_tests/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_869.wast
;; 10. **Test: Control Exit Scenarios with Nop in Exported Function**    - Create Module A with different control exit scenarios (`br`, `br_if`) surrounding nop instructions and export this function. Module B must correctly handle imports calling this function.    - **Constraint Check**: Ensures control exit strategies involving `nop` maintain stack and execution fidelity across modules.    - **Relation to Differential Handling**: faulty context management causing mishandling of control exits across WebAssembly versus wizard_engine.  By covering these scenarios, you can effectively verify differential behavior regarding the `nop` instruction and its integration into cross-module control flow handling.

(assert_invalid 
  (module
    (func $test (loop (if (i32.eqz (i32.const 0)) (br 1) (nop))))
    (export "test" (func $test)))
  "type mismatch")